--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -1,96 +1,30 @@
-.questions-parent-container{
+.dashboard-select-wrapper{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    padding-bottom: 2rem;
-    padding-top: 2rem;
+    margin: 3rem auto;
 }
 
-.small-main-form-header{
-    display: none;
-}
-
-.questions-options-container{
+.dashboard-content-wrapper{
     display: flex;
-    margin: 2rem auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100vw;
+    /* background-color: red; */
+}
+
+.dashboard-content-wrapper h4{
+    margin-bottom: 2rem;
+}
+
+.quest-item {
+    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.1);
+    display: flex;
+    justify-content: center;
+    width: 100%;
     padding: 2rem;
-    border-radius: 15px;
-    width: 50rem;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
 }
-
-.options-container{
-    display: flex;
-    border-radius: 4px;
-    flex-direction: column;
-    align-items: center;
-    margin: 1rem auto;
-    justify-content: center;
-    padding: 2rem 1rem;
-    border-radius: 15px;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-}
-
-@media only screen and (max-width: 900px) {
-    .questions-options-container{
-        width: 40rem;
-    }
-}
-
-@media only screen and (max-width: 1300px) {
-    .big-main-form-header{
-        width: 80%;
-        text-align: center;
-    }
-    
-    .main-form-subheader{
-        width: 80%;
-        text-align: center;
-    }
-}
-
-@media only screen and (max-width: 500px) {
-    .big-main-form-header{
-        display: none;
-    }
-
-    .small-main-form-header{
-        display: block;
-        width: 80%;
-        text-align: center;
-    }
-}
-
-@media only screen and (max-width: 320px) {
-    .main-form-subheader{
-        width: 70%;
-        text-align: center;
-    }
-}
-
-@media only screen and (max-width: 720px) {
-    .questions-options-container{
-        width: 30rem;
-    }
-
-    .questions-parent-container h2{
-        width: 90%;
-        text-align: center;
-    }
-}
-
-@media only screen and (max-width: 550px) {
-    .questions-options-container{
-        width: 15rem;
-    }
-
-    .options-container{
-        width: 100%;
-        box-shadow: none;
-    }
-}
-
