--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -20,11 +20,17 @@
     margin-bottom: 2rem;
 }
 
-.quest-item {
+.quest-item, .achievement-item, .user-item {
     box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.1);
     display: flex;
     justify-content: center;
-    width: 100%;
+    align-items: center;
+    flex-flow: wrap;
     padding: 2rem;
     border-radius: 10px;
+    margin: 2rem auto;
+}
+
+.quest-item > div, .achievement-item > div, .user-item > div {
+    margin: auto 2rem;
 }
