--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -20,7 +20,7 @@
     margin-bottom: 2rem;
 }
 
-.quest-item, .achievement-item, .user-item {
+.quest-item, .achievement-item, .user-item, .rank-item {
     box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.1);
     display: flex;
     justify-content: center;
@@ -31,6 +31,14 @@
     margin: 2rem auto;
 }
 
-.quest-item > div, .achievement-item > div, .user-item > div {
+.quest-item > div, .achievement-item > div, .user-item > div, .rank-item > div {
     margin: auto 2rem;
+}
+
+.create-rank-container{
+    
+}
+
+.ant-delete-button{
+    margin-right: 2rem;
 }
