--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -1,44 +1,54 @@
-.dashboard-select-wrapper{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 3rem auto;
+.dashboard-select-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 3rem auto;
 }
 
-.dashboard-content-wrapper{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 100vw;
-    /* background-color: red; */
+.dashboard-content-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100vw;
+  /* background-color: red; */
 }
 
-.dashboard-content-wrapper h4{
-    margin-bottom: 1rem;
+.dashboard-content-wrapper h4 {
+  margin-bottom: 1rem;
 }
 
-.quest-item, .achievement-item, .user-item, .rank-item {
-    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: wrap;
-    padding: 2rem;
-    border-radius: 10px;
-    margin: 2rem auto;
+.quest-item,
+.achievement-item,
+.user-item,
+.rank-item {
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap;
+  padding: 2rem;
+  border-radius: 10px;
+  margin: 2rem auto;
 }
 
-.quest-item > div, .achievement-item > div, .user-item > div, .rank-item > div {
-    margin: auto 2rem;
+.quest-item > div,
+.achievement-item > div,
+.user-item > div,
+.rank-item > div {
+  margin: auto 2rem;
 }
 
 .create-rank-container > input {
-    margin: .5rem auto;
+  margin: 0.5rem auto;
 }
 
-.ant-delete-button{
-    margin-right: 2rem;
+.ant-delete-button {
+  margin-right: 2rem;
+}
+
+.update-controls {
+  margin-top: 5px;
 }
